--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- TODO: Add proper head tag to provide a page description for search
-             engines. -->
+        <meta name="description" content="API Superstore Product Website">
         <title>API Superstore</title>
         <!-- Bootstrap CSS Framework -->
         <!-- You can remove the ``link`` tags below if you don't want to use
@@ -28,15 +27,18 @@
         <link rel="favicon" href="favicon.ico">
 
     </head>
-    <body>
-        <!-- Note: If you do not see a camera icon in the heading below
-             when you view this file in a web browser, then there is an issue
-             with how FontAwesome is linked to this page. -->
-        <h1><span class="fas fa-camera-retro"></span> Hello World!</h1>
+    <body  
         <!-- TODO: Populate this page with all the content you deem
              necessary to create a compelling product page! -->
-
-        <!-- TODO: Create an area to put the explainer video. -->
+        <!--introductory text -->
+        <p>Welcome to the API Superstore! If you’ve ever been frustrated by the plethora of API’s available to web developers, with new options popping up overnight and major updates released for stable products every week, we’re here to help! We were founded by a group of talented, entrepreneurial developers who saw a problem and decided to fix it. Our experts, with combined decades of experience in the field, can help you find the right API for your project based on a wide variety of factors, including programming-language, features needed, security concerns and documentation. Our reputation in this area is golden. <br> Watch this explanatory video to learn more!</p> 
+        <!-- end introductory text-->
+        <!-- explainer video -->
+        <section id="watch">
+            <h2>How it Works</h2>            
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo" frameborder="0" allow="accelerometer;                  autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+        <!-- end explainer video -->
 
         <!-- TODO: Create an area to put the long product description. -->
 
