added social media links

--- a/index.html
+++ b/index.html
@@ -79,13 +79,33 @@
         <!-- company contact area -->
         <div class="contact area">
         <h2>Contact Us</h2>
-        
+          <p>
+            Seattle, WA, USA
+          </p>
+          <p>
+            <abbr title="Phone">P</abbr>: 206-555-1234
+          </p>
+          <p>
+            <abbr title="Email">E</abbr>:
+            <a href="mailto:name@example.com">info@apisuperstore.com
+            </a>
+          </p>
         </div>
         <!-- end company contact area -->
 
-
         <!-- TODO: Create an area that allows users to Share links to the
              page. -->
+
+        <!--social media link-->
+        <div class="social links">
+        <h2>Tell People about API Supertore!<h2>
+        <ul class="social-links">
+            <li><a href="http://twitter.com"><i class="fab fa-twitter-square" style="font-size:80px;color:#1DA1F2"></i></a></li>
+            <li><a href="http://facebook.com"><i class="fab fa-facebook-f" style="font-size:80px;color:#3B5998"></i></a></li>
+            <li><a href="http://instagram.com"><i class="fab fa-instagram" style="font-size:80px;color:#BD081C"></i></a></li>        
+        </ul>
+        </div>
+        <!--end social media links-->
 
         <!-- TODO: Create a call to action link to get users to sign up for the
              service. -->
