added floated icon, sized

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 
     </head>
     <body  
+
+<!-- floated store icon -->
+<p><img src="assets/logos/api_superstore_logo_bg.png" alt="API Superstore icon" style="float:left;width: 400px;height:80px">
+<!-- end icon-->
         
         <!--introductory text -->
         <section class="introduction">
