--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     </head>
     <body  
 
-<!-- floated store icon -->
-<p><img src="assets/logos/api_superstore_logo_bg.png" alt="API Superstore icon" style="float:left;width: 400px;height:80px">
+    <!-- floated store icon -->
+    <div class="icon">
+    <p><img src="assets/logos/api_superstore_logo_bg.png" alt="API Superstore icon" style="float:left;width: 400px;height:80px">
+    </div>
 <!-- end icon-->
         
         <!--introductory text -->
@@ -74,9 +76,6 @@
         </section>        
         <!-- end feature list -->
 
-        <!-- TODO: Create an area to show company contact info (phone,
-             location, etc.) -->
-
         <!-- company contact area -->
         <div class="contact area">
         <h2>Contact Us</h2>
@@ -93,9 +92,6 @@
           </p>
         </div>
         <!-- end company contact area -->
-
-        <!-- TODO: Create an area that allows users to Share links to the
-             page. -->
 
         <!--social media link-->
         <div class="social links">
@@ -114,8 +110,22 @@
         </div>
         <!-- end call to action button -->
 
+        <!--footer-->
+        <footer>
+            <footer class="py-5 bg-dark">
+            <div class="container">
+            <div class="footer-flex">
+                <p class="footer-item-flex text-white">Copyright ©2018 API Superstore</p>
+                <p class="footer-item-flex text-white">Travis Bassett</p>
+            </div>
+            </div>
+        <!-- /.container -->
+        </footer>
+        <!--footer -->
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     </body>
+    
 </html>
