nice border on embedded youtube video, centered section

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 <div class="format">
 
     <!-- floated store icon -->
-    <div class="icon">
-    <p><img src="assets/logos/api_superstore_logo_bg.png" alt="API Superstore icon" style="float:left;width: 400px;height:80px">
+    <div class="icona">
+    <p><img src="assets/logos/api_superstore_logo_bg.png" alt="API Superstore icon" style="float:left;width: 400px;height:80px; padding: 0px 20px 0px 0px;">
     </div>
     <!-- end icon-->
         
@@ -93,7 +93,7 @@
         <!-- explainer video -->
         <section class="watch" id="watch">
             <h2>How it Works</h2>            
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+             <iframe class="formatvideo" width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <!-- end explainer video -->
         
