finally centered call to action button

--- a/index.html
+++ b/index.html
@@ -187,8 +187,10 @@
         <hr>
         
         <!-- call to action button -->
+        <div class ="thebutton">        
         <div class="col-md-4" id ="call to action">
           <a class="btn btn-lg btn-secondary btn-block" href="#">Sign Up!</a>
+        </div>
         </div>
         <!-- end call to action button -->
 
