got contact info into card without breaking anything

--- a/index.html
+++ b/index.html
@@ -157,7 +157,12 @@
         <!-- company contact area -->
         <div class="contact area" id="contact area">
         <h2>Contact Us</h2>
-          <p>
+          
+    <div class="row">
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <p class="card-text"><p>
             Seattle, WA, USA
           </p>
           <p>
@@ -167,7 +172,12 @@
             <abbr title="Email">E</abbr>:
             <a href="mailto:name@example.com">info@apisuperstore.com
             </a>
-          </p>
+          </p></p>
+          </div>
+        </div>
+      </div>
+      </div>
+          
         </div>
         <!-- end company contact area -->
 
