commented out flex code that is messing with the contact card

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <hr>
 
         <!-- company contact area -->
-        <div class="contact area" id="contact area">
+        <div class="contact-area" id="contact-area">
         <h2>Contact Us</h2>
           
     <div class="row">
