added border to responsive embedded video

--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
         <section class="watch" id="watch">
             <h2>How it Works</h2>
             
+            <div class="formatvideo"> 
             <div class="embed-responsive embed-responsive-16by9">
-            
-             <iframe class="formatvideo" width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         </div>
         </section>
         <!-- end explainer video -->
