corrected contact area

--- a/index.html
+++ b/index.html
@@ -165,22 +165,22 @@
           
     <!--<div class="row">-->
 <div class ="contact-area">
-        <div class="card h-100 w-25">
-          <div class="card-body">
-            <p class="card-text"><p>
+
+<div class="col-lg-4 mb-4">
+          <p>
             Seattle, WA, USA
+            <br>
           </p>
           <p>
-            <abbr title="Phone">P</abbr>: 206-555-1234
+            <abbr title="Phone">P</abbr>: (123) 456-7890
           </p>
           <p>
             <abbr title="Email">E</abbr>:
-            <a href="mailto:name@example.com">info@apisuperstore.com
+            <a href="mailto:name@example.com">name@example.com
             </a>
-          </p></p>
-          </div>
+          </p>
         </div>
-      </div>
+          </div>
           
         <!-- end company contact area -->
 
