pretty much done, may still add scroll spy

--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
         <div class="social-pad" id="social links">
         <h2>Tell People about API Supertore!<h2>
         <ul class="social-links">
-            <li><a href="http://twitter.com"><i class="fab fa-twitter-square" style="font-size:80px;color:#1DA1F2"></i></a></li>
-            <li><a href="http://facebook.com"><i class="fab fa-facebook-f" style="font-size:80px;color:#3B5998"></i></a></li>
-            <li><a href="http://instagram.com"><i class="fab fa-instagram" style="font-size:80px;color:#BD081C"></i></a></li>        
+            <li><a href="http://twitter.com"><i class="fab fa-twitter-square mytwitter"></i></a></li>
+            <li><a href="http://facebook.com"><i class="fab fa-facebook-f myfacebook" ></i></a></li>
+            <li><a href="http://instagram.com"><i class="fab fa-instagram myinstagram" ></i></a></li>        
         </ul>
         </div>
         <!--end social media links-->
