--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </head>
     
-    <body  
+    <body data-spy="scroll" data-target=".navbar" data-offset="50">  
 
       <!-- (1)Navigation -->
     
