added formatting to testimonials

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
           <div class="card-body">
-            <p class="card-text">“API Superstore knows what it’s about. They know APIs, they know the documentation, and they we ready to work with my team to get the job done and get it done right the first time.” - Clive Developer</p>
+            <p class="card-text"><blockquote class="blockquote">“API Superstore knows what it’s about. They know APIs, they know the documentation, and they we ready to work with my team to get the job done and get it done right the first time.”<footer class="blockquote-footer">Clive Developer<footer></p></blockquote>
           </div>
         </div>
       </div>
@@ -127,7 +127,7 @@
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
           <div class="card-body">
-            <p class="card-text">“We were flooded with options on the JavaScript API market. Our within house team identified 10 APIs all with their own licensing criteria that seemed like a good match for our project. API Superstore got use the rest of the way. The project is done, the developers are happy, and management thinks we’re geniuses!” -Peter Troubleshooter</p>
+            <p class="card-text"><blockquote class="blockquote">“API Superstore knows what it’s about. They know APIs, they know the documentation, and they we ready to work with my team to get the“We were flooded with options on the JavaScript API market. Our within house team identified 10 APIs all with their own licensing criteria that seemed like a good match for our project. API Superstore got use the rest of the way. The project is done, the developers are happy, and management thinks we’re geniuses!” <footer class="blockquote-footer">Peter Troubleshooter<footer></p></blockquote>
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
           <div class="card-body">
-            <p class="card-text">“Software development is hard; these people make it easier and will hold your hand while your people work out the nuances of whatever API they’re using” -Jessica Manager</p>
+            <p class="card-text"><blockquote class="blockquote">“Software development is hard; these people make it easier and will hold your hand while your people work out the nuances of whatever API they’re using”<footer class="blockquote-footer">Jessica Manager<footer></blockquote></p>
           </div>
         </div>
       </div>
